# MazeGenSolver

./: CMakeLists.txt  LICENSE  README.md  generator.cpp  generator.h  infowindow.cpp  infowindow.h  infowindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maze.cpp  maze.h  maze_generator_worker.cpp  maze_generator_worker.h  maze_widget.cpp  maze_widget.h  refwindow.cpp  refwindow.h  refwindow.ui  resources.qrc  solver.h  stats_entry.h
.github/workflow/: build-linux.yaml
.github/workflows/: build-linux.yaml
generators/: dfs_generator.cpp  dfs_generator.h  kruskal_generator.cpp  kruskal_generator.h  prim_generator.cpp  prim_generator.h
solvers/: astar_solver.cpp  astar_solver.h  bfs_solver.cpp  bfs_solver.h  dijkstra_solver.cpp  dijkstra_solver.h
